# renquant-artifacts

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  renquant_repo.yml
.github/workflows/: ci.yml
registry/: example-artifact.json
src/renquant_artifacts/: __init__.py  contracts.py  registry.py  validation.py
tests/: test_artifact_contracts.py  test_artifact_manifest_validation.py  test_artifact_registry.py  test_no_large_artifacts.py
