[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renquant-artifacts"
version = "0.1.0"
description = "Artifact registry and validation workflows for RenQuant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["renquant-common>=0.1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../renquant-common/src"]
testpaths = ["tests"]
